<resources>
    <string name="app_name">ProvaP1</string>
    <string name="button_login">Acessar o app</string>
    <string name="input_text_email">E-mail</string>
    <string name="input_text_email_cpf">E-mail ou CPF</string>
    <string name="input_text_password">Senha</string>
    <string name="input_text_name">Nome</string>
    <string name="input_text_cpf">CPF</string>
    <string name="dots">...</string>
    <string name="show_details">Exibir Detalhes</string>
    <string name="show_back">Voltar</string>
</resources>